--- a/index.html
+++ b/index.html
@@ -461,11 +461,11 @@
                 }
             });
             window.addEventListener('DOMContentLoaded', (event) => {
-                var script = document.createElement('script');
-                script.setAttribute('type', 'text/javascript');
-                script.async = true;
-                script.setAttribute('src', 'https://www.googletagmanager.com/gtag/js?id=G-213WP915X0');
-                document.getElementsByTagName('head')[0].appendChild(script);
+                //- var script = document.createElement("script");
+                //- script.setAttribute("type", "text/javascript");
+                //- script.async = true;
+                //- script.setAttribute("src", "https://www.googletagmanager.com/gtag/js?id=G-213WP915X0");
+                //- document.getElementsByTagName("head")[0].appendChild(script);
 
                 // Activate Bootstrap scrollspy on the main nav element
                 const mainNav = document.body.querySelector('#mainNav');
