--- a/terms.html
+++ b/terms.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-213WP915X0"></script>
+        <script defer src="https://www.googletagmanager.com/gtag/js?id=G-213WP915X0"></script>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="What you can expect from TechMine" />
@@ -390,7 +390,7 @@
             form.addEventListener('submit', handleSubmit);
         </script>
         <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <!--script(src='js/scripts.js')-->
         <script>
