--- a/faq.html
+++ b/faq.html
@@ -114,6 +114,19 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="accordion-item">
+                                <h3 class="accordion-header" id="headingSix"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">What is the largest file I can use?</button></h3>
+                                <div class="accordion-collapse collapse" id="collapseSix" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <strong>There is no size limit.</strong>
+                                        You can send and receive any size file as long as the space is available on the device.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h3 class="accordion-header" id="headingSeven"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">Why are transfers so much faster when the devices are on the same network?</button></h3>
+                                <div class="accordion-collapse collapse" id="collapseSeven" aria-labelledby="headingSeven" data-bs-parent="#accordionExample"><div class="accordion-body">If two devices are on the same network, then the transfer does not need to use the internet and can instead use the full speed available on your local network.</div></div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-xl-4">
