--- a/index.html
+++ b/index.html
@@ -99,49 +99,49 @@
                                             <div class="carousel-item active">
                                                 <img class="d-block w-100" src="/img/AndroidScreenshot0.jpg" alt="Screenshot 1" loading="lazy" style="border-radius: 25px" />
                                                 <div class="carousel-caption d-md-block">
-                                                    <h2>View Folders!</h2>
+                                                    <p class="fw-bolder lead">View Folders!</p>
                                                     <p>See the files and folders that your devices expose. Search! Sort! Share!</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
                                                 <img class="d-block w-100" src="/img/AndroidScreenshot1.jpg" alt="Screenshot 2" loading="lazy" style="border-radius: 25px" />
                                                 <div class="carousel-caption d-md-block">
-                                                    <h2>Preview Images!</h2>
+                                                    <p class="fw-bolder lead">Preview Images!</p>
                                                     <p>Load images directly from your devices.</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
                                                 <img class="d-block w-100" src="/img/AndroidScreenshot2.jpg" alt="Screenshot 3" loading="lazy" style="border-radius: 25px" />
                                                 <div class="carousel-caption d-md-block">
-                                                    <h2>Preview Text!</h2>
+                                                    <p class="fw-bolder lead">Preview Text!</p>
                                                     <p>Preview text from directly from the app. Open with a text editor to save changes.</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
                                                 <img class="d-block w-100" src="/img/AndroidScreenshot3.jpg" alt="Screenshot 4" loading="lazy" style="border-radius: 25px" />
                                                 <div class="carousel-caption d-md-block">
-                                                    <h2>Preview Videos!</h2>
+                                                    <p class="fw-bolder lead">Preview Videos!</p>
                                                     <p>Stream videos from anywhere instantly! Works with large 4K videos and movies!</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
                                                 <img class="d-block w-100" src="/img/AndroidScreenshot4.jpg" alt="Screenshot 5" loading="lazy" style="border-radius: 25px" />
                                                 <div class="carousel-caption d-md-block">
-                                                    <h2>Native Files Integration!</h2>
+                                                    <p class="fw-bolder lead">Native Files Integration!</p>
                                                     <p>Browse your files from the familiarity of the built in file system.</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
                                                 <img class="d-block w-100" src="/img/AndroidScreenshot5.jpg" alt="Screenshot 6" loading="lazy" style="border-radius: 25px" />
                                                 <div class="carousel-caption d-md-block">
-                                                    <h2>Native Files Integration!</h2>
+                                                    <p class="fw-bolder lead">Native Files Integration!</p>
                                                     <p>List and open files as if they were directly on your device!</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
                                                 <img class="d-block w-100" src="/img/AndroidScreenshot6.jpg" alt="Screenshot 7" loading="lazy" style="border-radius: 25px" />
                                                 <div class="carousel-caption d-md-block">
-                                                    <h2>Open PDFs!</h2>
+                                                    <p class="fw-bolder lead">Open PDFs!</p>
                                                     <p>Open PDFs and other files instantly with your favorite app!</p>
                                                 </div>
                                             </div>
@@ -258,49 +258,49 @@
                                             <div class="carousel-item">
                                                 <img class="d-block w-100" src="/img/AndroidScreenshot0.jpg" alt="Screenshot 1" loading="lazy" style="border-radius: 25px" />
                                                 <div class="carousel-caption d-md-block">
-                                                    <h2>View Folders!</h2>
+                                                    <p class="fw-bolder lead">View Folders!</p>
                                                     <p>See the files and folders that your devices expose. Search! Sort! Share!</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
                                                 <img class="d-block w-100" src="/img/AndroidScreenshot1.jpg" alt="Screenshot 2" loading="lazy" style="border-radius: 25px" />
                                                 <div class="carousel-caption d-md-block">
-                                                    <h2>Preview Images!</h2>
+                                                    <p class="fw-bolder lead">Preview Images!</p>
                                                     <p>Load images directly from your devices.</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
                                                 <img class="d-block w-100" src="/img/AndroidScreenshot2.jpg" alt="Screenshot 3" loading="lazy" style="border-radius: 25px" />
                                                 <div class="carousel-caption d-md-block">
-                                                    <h2>Preview Text!</h2>
+                                                    <p class="fw-bolder lead">Preview Text!</p>
                                                     <p>Preview text from directly from the app. Open with a text editor to save changes.</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item active">
                                                 <img class="d-block w-100" src="/img/AndroidScreenshot3.jpg" alt="Screenshot 4" loading="lazy" style="border-radius: 25px" />
                                                 <div class="carousel-caption d-md-block">
-                                                    <h2>Preview Videos!</h2>
+                                                    <p class="fw-bolder lead">Preview Videos!</p>
                                                     <p>Stream videos from anywhere instantly! Works with large 4K videos and movies!</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
                                                 <img class="d-block w-100" src="/img/AndroidScreenshot4.jpg" alt="Screenshot 5" loading="lazy" style="border-radius: 25px" />
                                                 <div class="carousel-caption d-md-block">
-                                                    <h2>Native Files Integration!</h2>
+                                                    <p class="fw-bolder lead">Native Files Integration!</p>
                                                     <p>Browse your files from the familiarity of the built in file system.</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
                                                 <img class="d-block w-100" src="/img/AndroidScreenshot5.jpg" alt="Screenshot 6" loading="lazy" style="border-radius: 25px" />
                                                 <div class="carousel-caption d-md-block">
-                                                    <h2>Native Files Integration!</h2>
+                                                    <p class="fw-bolder lead">Native Files Integration!</p>
                                                     <p>List and open files as if they were directly on your device!</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
                                                 <img class="d-block w-100" src="/img/AndroidScreenshot6.jpg" alt="Screenshot 7" loading="lazy" style="border-radius: 25px" />
                                                 <div class="carousel-caption d-md-block">
-                                                    <h2>Open PDFs!</h2>
+                                                    <p class="fw-bolder lead">Open PDFs!</p>
                                                     <p>Open PDFs and other files instantly with your favorite app!</p>
                                                 </div>
                                             </div>
@@ -412,6 +412,19 @@
                                         You can use TechMine from the web, although it is strongly recommended to use the app to get access to the full range of features. You can allow the app to have access to specific folders, while you need to specify the files the web has access to. The app can open any file types, while the web version is limited to files that TechMine can preview directly. The app can run in the background, while the web version needs to be open in your browser to send and receive files.
                                     </div>
                                 </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h3 class="accordion-header" id="headingSix"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">What is the largest file I can use?</button></h3>
+                                <div class="accordion-collapse collapse" id="collapseSix" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <strong>There is no size limit.</strong>
+                                        You can send and receive any size file as long as the space is available on the device.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h3 class="accordion-header" id="headingSeven"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">Why are transfers so much faster when the devices are on the same network?</button></h3>
+                                <div class="accordion-collapse collapse" id="collapseSeven" aria-labelledby="headingSeven" data-bs-parent="#accordionExample"><div class="accordion-body">If two devices are on the same network, then the transfer does not need to use the internet and can instead use the full speed available on your local network.</div></div>
                             </div>
                         </div>
                     </div>
